--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -8,11 +8,11 @@
   <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
     <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
   </nb-select>
-  <ngx-layout-direction-switcher class="direction-switcher" style="display: none"></ngx-layout-direction-switcher>
+  <ngx-layout-direction-switcher class="direction-switcher"></ngx-layout-direction-switcher>
 </div>
 
 <div class="header-container">
-  <nb-actions size="small" style="display: none">
+  <nb-actions size="small">
 
     <nb-action class="control-item">
       <nb-search type="rotate-layout"></nb-search>
@@ -22,8 +22,8 @@
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
                [onlyPicture]="userPictureOnly"
-               [name]="user?.name"
-               [picture]="user?.picture">
+               [name]="'Sergio Fernandez'"
+               [picture]="'https://media-exp1.licdn.com/dms/image/C4E03AQEZeEW9-QKn5w/profile-displayphoto-shrink_100_100/0?e=1593043200&v=beta&t=sWxFUaTH81t5y494I3acnUwCtiwLtvq9cSeksMDfLWw'">
       </nb-user>
     </nb-action>
   </nb-actions>
